hh/vDSP.h

    
    typedef unsigned long vDSP_Length;
typedef long long vDSP_Stride;
typedef long vDSP_Stride;
extern void vDSP_blkman_window(float *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_blkman_windowD(double *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_hamm_window(float *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_hamm_windowD(double *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_hann_window(float *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_hann_windowD(double *__C, vDSP_Length __N, int __Flag)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgathr(const float *__A, const vDSP_Length *__B,
                        vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgathrD(const double *__A, const vDSP_Length *__B,
                         vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgathra(const float *const __nonnull *__nonnull __A,
                         vDSP_Stride __IA, float *__C, vDSP_Stride __IC,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgathraD(const double *const __nonnull *__nonnull __A,
                          vDSP_Stride __IA, double *__C, vDSP_Stride __IC,
                          vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgen(const float *__A, const float *__B, float *__C,
                      vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgenD(const double *__A, const double *__B, double *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgenp(const float *__A, vDSP_Stride __IA, const float *__B,
                       vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                       vDSP_Length __N,
                       vDSP_Length __M) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vgenpD(const double *__A, vDSP_Stride __IA, const double *__B,
                        vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                        vDSP_Length __N,
                        vDSP_Length __M) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vindex(const float *__A, const float *__B, vDSP_Stride __IB,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vindexD(const double *__A, const double *__B, vDSP_Stride __IB,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vintb(const float *__A, vDSP_Stride __IA, const float *__B,
                       vDSP_Stride __IB, const float *__C, float *__D,
                       vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vintbD(const double *__A, vDSP_Stride __IA, const double *__B,
                        vDSP_Stride __IB, const double *__C, double *__D,
                        vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vlint(const float *__A, const float *__B, vDSP_Stride __IB,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N,
                       vDSP_Length __M) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vlintD(const double *__A, const double *__B, vDSP_Stride __IB,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __M) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vswmax(const float *__A, vDSP_Stride __IA, float *__C,
                        vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __WindowLength)
    API_AVAILABLE(macos(10.10), ios(8.0));
extern void vDSP_vswmaxD(const double *__A, vDSP_Stride __IA, double *__C,
                         vDSP_Stride __IC, vDSP_Length __N,
                         vDSP_Length __WindowLength)
    API_AVAILABLE(macos(10.10), ios(8.0));
extern void vDSP_vpoly(const float *__A, vDSP_Stride __IA, const float *__B,
                       vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                       vDSP_Length __N,
                       vDSP_Length __P) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vpolyD(const double *__A, vDSP_Stride __IA, const double *__B,
                        vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                        vDSP_Length __N,
                        vDSP_Length __P) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vqint(const float *__A, const float *__B, vDSP_Stride __IB,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N,
                       vDSP_Length __M) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vqintD(const double *__A, const double *__B, vDSP_Stride __IB,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __M) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vramp(const float *__A, const float *__B, float *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrampD(const double *__A, const double *__B, double *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrsum(const float *__A, vDSP_Stride __IA, const float *__S,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrsumD(const double *__A, vDSP_Stride __IA, const double *__S,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrvrs(float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vrvrsD(double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsimps(const float *__A, vDSP_Stride __IA, const float *__B,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsimpsD(const double *__A, vDSP_Stride __IA, const double *__B,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsort(float *__C, vDSP_Length __N, int __Order)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsortD(double *__C, vDSP_Length __N, int __Order)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsorti(const float *__C, vDSP_Length *__I,
                        vDSP_Length *__nullable __Temporary, vDSP_Length __N,
                        int __Order) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsortiD(const double *__C, vDSP_Length *__I,
                         vDSP_Length *__nullable __Temporary, vDSP_Length __N,
                         int __Order) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vswap(float *__A, vDSP_Stride __IA, float *__B,
                       vDSP_Stride __IB, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vswapD(double *__A, vDSP_Stride __IA, double *__B,
                        vDSP_Stride __IB, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vswsum(const float *__A, vDSP_Stride __IA, float *__C,
                        vDSP_Stride __IC, vDSP_Length __N,
                        vDSP_Length __P) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vswsumD(const double *__A, vDSP_Stride __IA, double *__C,
                         vDSP_Stride __IC, vDSP_Length __N,
                         vDSP_Length __P) 
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vtabi(const float *__A, vDSP_Stride __IA, const float *__S1,
                       const float *__S2, const float *__C, vDSP_Length __M,
                       float *__D, vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vtabiD(const double *__A, vDSP_Stride __IA, const double *__S1,
                        const double *__S2, const double *__C, vDSP_Length __M,
                        double *__D, vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vthrsc(const float *__A, vDSP_Stride __IA, const float *__B,
                        const float *__C, float *__D, vDSP_Stride __ID,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vthrscD(const double *__A, vDSP_Stride __IA, const double *__B,
                         const double *__C, double *__D, vDSP_Stride __ID,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vtmerg(const float *__A, vDSP_Stride __IA, const float *__B,
                        vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vtmergD(const double *__A, vDSP_Stride __IA, const double *__B,
                         vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                         vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vtrapz(const float *__A, vDSP_Stride __IA, const float *__B,
                        float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vtrapzD(const double *__A, vDSP_Stride __IA, const double *__B,
                         double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_wiener(vDSP_Length __L, const float *__A, const float *__C,
                        float *__F, float *__P, int __Flag, int *__Error)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_wienerD(vDSP_Length __L, const double *__A, const double *__C,
                         double *__F, double *__P, int __Flag, int *__Error)
    API_AVAILABLE(macos(10.4), ios(4.0));